[package]
name = "gq-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
derivative.workspace = true
thiserror.workspace = true

color-eyre = "0.6.5"
tokio = { version = "1.48.0", features = ["macros", "parking_lot", "rt-multi-thread", "tracing", "fs", "io-util"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2.1"
toml = { version = "0.9.8", features = ["parse"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
base64 = "0.22.1"
sha3 = "0.10.8"
clap = { version = "4.5.53", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
pasetors = "0.7.7"
async-graphql = "7.0.17"
actix-web = "4.12.1"
async-graphql-actix-web = "7.0.17"
tracing-actix-web = "0.7.19"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid"] }
semver = "1.0.27"

[dev-dependencies]
warp = { version = "0.3" }
serde_json = "1.0"
assert-json-diff = "2.0"
